@@ -52,6 +52,10 @@ Bug fixes
   BooleanQuery searches.  (Dragan Jotannovic, jane chang via Mike
   McCandless)
   
+* LUCENE-6306: Merging of doc values and norms now checks whether the
+  merge was aborted so IndexWriter.rollback can more promptly abort a
+  running merge. (Robert Muir, Mike McCandless)
+
 API Changes
 
 * LUCENE-6212: Deprecate IndexWriter APIs that accept per-document Analyzer.
